Update index.html to reflect version number in header

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ICI</h1>
+    <h1>ICI 1.0</h1>
     <h1>System uptime:</h1>
     <script>
         // Fetch system uptime from the server
