--- a/templates/index.html
+++ b/templates/index.html
@@ -8,16 +8,7 @@
 <body>
     <h1>ICI 1.1</h1>
     <h1>System uptime:</h1>
-    <script>
-        // Fetch system uptime from the server
-        fetch('/uptime')
-            .then(response => response.json())
-            .then(data => {
-                const uptimeElement = document.createElement('p');
-                uptimeElement.textContent = `Uptime: ${data.uptime}`;
-                document.body.appendChild(uptimeElement);
-            })
-            .catch(error => console.error('Error fetching uptime:', error));
-    </script>
+    <div id="content-area"></div>
+    <script src="index.js"></script>
 </body>
 </html>
