Update app description in index.html to remove reference to Google Cloud Run

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>ICI 2.5</h1>
-    <p id="app-description">This app is designed to demonstrate continuous integration and deployment with Google Cloud Run.</p>
+    <p id="app-description">This app is designed to demonstrate continuous integration and deployment.</p>
     <p>Data from server: <span id="data-from-server"></span></p>
     <script>
     </script>
